--- a/src/Node.css
+++ b/src/Node.css
@@ -1,7 +1,7 @@
 .node {
   width: 25px;
   height: 25px;
-  outline: 1px solid rgb(175, 216, 248);
+  outline: 1px solid rgb(255, 255, 255);
   display: inline-block;
 }
 
@@ -14,5 +14,9 @@
 }
 
 .node_air {
-    background-color: rgb(175, 216, 248);
+    background-color: rgb(250, 250, 250);
+}
+
+.node_cloud {
+    background-color: rgb(240, 248, 255);
 }
